--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,13 @@ body {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  background: #ccc;
+  padding: 0.5rem 1rem;
+}
+
+a + a {
+  margin-left: 1rem;
 }
 
 * {
