--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -122,3 +122,19 @@
   align-items: center;
   flex-direction: column;
 }
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  max-width: 320px;
+  width: 100%;
+}
+
+.input {
+  padding: 0.5rem;
+}
+
+.input + .input {
+  margin-top: 1rem;
+}
